refs #151 - initial right to left tablet/mobile support

--- a/openlegacy/openlegacy-templates/openlegacy-as400-menus/src/main/webapp/WEB-INF/mobile/template/header.jspx
+++ b/openlegacy/openlegacy-templates/openlegacy-as400-menus/src/main/webapp/WEB-INF/mobile/template/header.jspx
@@ -6,12 +6,10 @@
 	<jsp:output omit-xml-declaration="yes" /> 
 
 	<c:set var="backVal" value=""/>
-	<c:if test="${definitions != null 
-		&amp;&amp; (fn:contains(definitions.navigationDefinition.targetEntity.simpleName, 'Details') 
-					|| (deviceType eq 'MOBILE'))}">
+	<c:if test="${definitions != null &amp;&amp; definitions.typeName != 'LoginEntity' &amp;&amp; (accessedFromDefinitions.typeName != 'MenuEntity'  || deviceType eq 'MOBILE')}">
 		<c:set var="backVal" value="back:'Back',"/>
 	</c:if>
-
+	
 	<h1 data-dojo-type="dojox.mobile.Heading" 
 		data-dojo-props="fixed:'top', ${backVal} moveTo:'${definitions.navigationDefinition.accessedFrom.simpleName}Panel'">
 		<img src="images/logo.png" class="logo" />
