--- a/openlegacy/openlegacy-templates/openlegacy-as400-menus/src/main/webapp/WEB-INF/mobile/template/template.jspx
+++ b/openlegacy/openlegacy-templates/openlegacy-as400-menus/src/main/webapp/WEB-INF/mobile/template/template.jspx
@@ -82,23 +82,64 @@
 
 		<span data-dojo-type="dojox.mobile.ScreenSizeAware"><!-- FF --></span>
 		<div data-dojo-type="dojox.mobile.FixedSplitter" data-dojo-props="orientation:'H'" id="fixedSplitter">
+			<c:set var="width" value="350px" />
+			<c:if test="${openLegacyProperties.rightToLeft &amp;&amp; (deviceType ne 'MOBILE')}">
+				<c:set var="width" value="700px" />
+			</c:if>
+			<c:if test="${definitions == null || definitions.typeName == 'LoginEntity' || deviceType eq 'MOBILE'}">
+				<c:choose>
+				<c:when test="${openLegacyProperties.rightToLeft}">
+					<c:set var="width" value="0%" />
+				</c:when>
+				<c:otherwise>
+					<c:set var="width" value="100%" />
+				</c:otherwise>
+				</c:choose>
+			</c:if>
+			<style>#leftPane{width:${width};}</style>
 			<div id="leftPane" data-dojo-type="dojox.mobile.Container">
-				<div id="leftView" data-dojo-type="dojox.mobile.View" data-dojo-props="selected:true">
-					<ul data-dojo-type="dojox.mobile.EdgeToEdgeList">
-					</ul>
-					<div id="menuContainer" class="container" data-dojo-type="dojox.mobile.ContentPane">
-						<tiles:insertAttribute name="menuHeader" ignore="true"/>
-						<tiles:insertAttribute name="menu" ignore="true"/>
+				<c:choose>
+				<c:when test="${openLegacyProperties.rightToLeft}">
+					<div id="mainView" data-dojo-type="dojox.mobile.View">
+						<div id="bodyContainer" class="container" data-dojo-type="dojox.mobile.ContentPane">
+							<tiles:insertAttribute name="header" ignore="true"/>
+							<tiles:insertAttribute name="body"/>
+						</div>
 					</div>
-				</div>
+				</c:when>
+				<c:otherwise>
+					<div id="menuView" data-dojo-type="dojox.mobile.ScrollableView" data-dojo-props="selected:true">
+						<ul data-dojo-type="dojox.mobile.EdgeToEdgeList">
+						</ul>
+						<div id="menuContainer" class="container" data-dojo-type="dojox.mobile.ContentPane">
+							<tiles:insertAttribute name="menuHeader" ignore="true"/>
+							<tiles:insertAttribute name="menu" ignore="true"/>
+						</div>
+					</div>
+				</c:otherwise>
+				</c:choose>
 			</div>
 			<div id="rightPane" data-dojo-type="dojox.mobile.Container">
-				<div id="rightView" data-dojo-type="dojox.mobile.View">
-					<div id="bodyContainer" class="container" data-dojo-type="dojox.mobile.ContentPane">
-						<tiles:insertAttribute name="header" ignore="true"/>
-						<tiles:insertAttribute name="body"/>
+				<c:choose>
+				<c:when test="${openLegacyProperties.rightToLeft}">
+					<div id="menuView" data-dojo-type="dojox.mobile.ScrollableView" data-dojo-props="selected:true">
+						<ul data-dojo-type="dojox.mobile.EdgeToEdgeList">
+						</ul>
+						<div id="menuContainer" class="container" data-dojo-type="dojox.mobile.ContentPane">
+							<tiles:insertAttribute name="menuHeader" ignore="true"/>
+							<tiles:insertAttribute name="menu" ignore="true"/>
+						</div>
 					</div>
-				</div>
+				</c:when>
+				<c:otherwise>
+					<div id="mainView" data-dojo-type="dojox.mobile.View">
+						<div id="bodyContainer" class="container" data-dojo-type="dojox.mobile.ContentPane">
+							<tiles:insertAttribute name="header" ignore="true"/>
+							<tiles:insertAttribute name="body"/>
+						</div>
+					</div>
+				</c:otherwise>
+				</c:choose>
 			</div>
 		</div>
 
