--- a/openlegacy/openlegacy-templates/openlegacy-as400-menus/src/main/webapp/WEB-INF/mobile/template/view.jspx
+++ b/openlegacy/openlegacy-templates/openlegacy-as400-menus/src/main/webapp/WEB-INF/mobile/template/view.jspx
@@ -4,7 +4,7 @@
 	<jsp:directive.page contentType="text/html;charset=UTF-8" pageEncoding="UTF-8" /> 
 	<jsp:output omit-xml-declaration="yes" /> 
 
-	<div data-dojo-type="dojox.mobile.ScrollableView" id="${entityUniqueId}Panel" data-dojo-props="selected:true">
+	<div data-dojo-type="dojox.mobile.ScrollableView" dir="${openLegacyProperties.rightToLeft ? 'rtl': 'ltr'}" id="${entityUniqueId}Panel" data-dojo-props="selected:true">
 		<tiles:insertAttribute name="header" />
 		<tiles:insertAttribute name="body" />
 		<tiles:insertAttribute name="actions" ignore="true" />
